--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
 <h1>📊 عداد نقاط تركس — v5</h1>
-<p>القواعد المحدثة: اللطوش = −15 لكل لطشة، الديمن = −10 لكل ورقة ♦، بدون دبل.</p>
-<p>هذه نسخة مبسطة — الكود الكامل للتسجيل والحساب موجود في النسخ السابقة.</p>
+<p>القواعد الجديدة:</p>
+<ul>
+  <li>اللّطوش: −15 لكل لطشة (بدون دبل)</li>
+  <li>الديمن (♦): −10 لكل ورقة (بدون دبل)</li>
+</ul>
+<p>ملاحظة: نسخة PWA تشتغل أوفلاين بعد أول تشغيل.</p>
 <script>if('serviceWorker' in navigator){navigator.serviceWorker.register('./sw.js');}</script>
 </body>
 </html>
